fixed after review

--- a/index.html
+++ b/index.html
@@ -49,27 +49,31 @@
               <div class="column width-1-1">
                 <div class="row row-medium-hero">
                   <div
-                    class="column width-1-3 width-1-2-sm width-1-3-md width-2-5-lg"
+                    class="column width-1-1 width-1-2-sm width-1-3-md width-2-5-lg"
                   >
-                    <figure class="phone-class">
-                      <img src="images/iphone.png" alt="phone" />
-                    </figure>
+                    <div class="class-hero-flex">
+                      <figure class="phone-class">
+                        <img src="images/iphone.png" alt="phone" />
+                      </figure>
+                    </div>
                   </div>
                   <div
-                    class="column width-2-3 width-1-2-sm width-2-3-md class-hero-padd width-3-5-lg"
+                    class="column width-1-1 width-1-2-sm width-2-3-md class-hero-padd width-3-5-lg"
                   >
-                    <h2 class="hero-title">Lorem Ipsum is simply</h2>
-                    <p class="hero-text">
-                      dummy text of the printing & typeseting
-                    </p>
+                    <div class="class-hero-flex">
+                      <h2 class="hero-title">Lorem Ipsum is simply</h2>
+                      <p class="hero-text">
+                        dummy text of the printing & typeseting
+                      </p>
 
-                    <button class="button button-primary">
-                      <img
-                        src="images/Shape_2.svg"
-                        alt="ok"
-                        class="ok-class"
-                      />Sign up now
-                    </button>
+                      <button class="button button-primary">
+                        <img
+                          src="images/Shape_2.svg"
+                          alt="ok"
+                          class="ok-class"
+                        />Sign up now
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -82,7 +86,7 @@
             <div class="row row-large">
               <div class="column width-1-1 width-1-2-md width-1-3-lg">
                 <div class="card icon-class-spil class-horisontal">
-                  <div class="column width-1-4 width-1-3-sm width-1-1-lg">
+                  <div class="column width-1-3 width-1-2-sm width-1-1-lg">
                     <figure class="figur-pict-class">
                       <img
                         src="images/icon-pensil.svg"
@@ -92,7 +96,7 @@
                     </figure>
                   </div>
                   <div
-                    class="column width-3-4 width-2-3-sm width-1-1-lg text-icon-class"
+                    class="column width-2-3 width-2-3-sm width-1-1-lg text-icon-class"
                   >
                     <div class="card-body">
                       <h2 class="card-title">Contrary to popular</h2>
@@ -107,7 +111,7 @@
 
               <div class="column width-1-1 width-1-2-md width-1-3-lg">
                 <div class="card icon-class-spil class-horisontal">
-                  <div class="column width-1-3 width-1-1-lg">
+                  <div class="column width-1-3 width-1-2-sm width-1-1-lg">
                     <figure class="figur-pict-class">
                       <img
                         src="images/icon-monitor.svg"
@@ -130,7 +134,7 @@
 
               <div class="column width-1-1 width-1-3-lg">
                 <div class="card icon-class-spil class-horisontal">
-                  <div class="column width-1-3 width-1-1-lg">
+                  <div class="column width-1-3 width-1-2-sm width-1-1-lg">
                     <figure class="figur-pict-class">
                       <img
                         src="images/icon-cart.svg"
